# cine-reader

./: .gitignore  MANIFEST.in  PYPI.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-python-package.yml
Matlab/: API.md  Cine.m  README.md  build_mex_unpack10bit_cached.m  test.m
Matlab/C_Files/: README.md  unpack_data_arm64.dylib
Matlab/examples/: basic_usage.m
Matlab/private/: cine_demosaic_bilinear.m  cine_mode_mad_stack.m  cine_replace_dead_pixels.m  mex_unpack10bit.c  mex_unpack10bit_cached.c
c_src/: unpack_data_arm64.c  unpack_data_elf64.c  unpack_data_win32.c  unpack_data_win32.h  unpack_data_win64.c  unpack_data_win64.h
python/: API.md  README.md
python/examples/: basic_usage.py  performance_test.py  trim_and_background.py
python/src/cine_reader/: __init__.py  _lookup.py  cine.py  frame_decode.py  headers.py  image_ops.py  stats.py  unpack.py
python/tests/: test_cine_processing.py  test_cine_smoke.py  test_frame_decode.py  test_image_ops.py  test_stats.py  test_unpack.py
release/v0.1.0/: cine_reader-0.1.0-py3-none-any.whl
sample_data/: README.md
