[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cine-handler"
version = "0.1.0"
description = "Cross-platform Python reader for Vision Research Phantom .cine files"
readme = { file = "PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [
  { name = "Rees Verleur" }
]
license = "MIT"
keywords = ["phantom", "cine", "high-speed-camera", "imaging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/rverleur/cine-reader"
Repository = "https://github.com/rverleur/cine-reader"
Documentation = "https://github.com/rverleur/cine-reader/blob/main/python/API.md"
Issues = "https://github.com/rverleur/cine-reader/issues"
Releases = "https://github.com/rverleur/cine-reader/releases"
"MATLAB Implementation" = "https://github.com/rverleur/cine-reader/tree/main/Matlab"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=5.0",
]

[tool.setuptools]
package-dir = {"" = "python/src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.setuptools.package-data]
cine_reader = [
  "libs/*.dll",
  "libs/*.so",
  "libs/*.dylib",
  "py.typed",
]
